src/test/resources/parser/MultipleCompanionBlock.out
error: Duplicate `comp` block
--> ./MultipleCompanionBlock.casc:10:4
9  |
10 |     comp {
         ^^^^= hint: Remove this block
11 |
