src/test/resources/parser/MultipleCompanionBlock.casc
class MultipleCompanionBlock {

}

impl MultipleCompanionBlock {
    comp {

    }

    comp {

    }
}